--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GB_Android_Base_SimpleCalculator</string>
+    <string name="app_name">Simple Calculator</string>
     <string name="_1">1</string>
     <string name="_2">2</string>
     <string name="_3">3</string>
@@ -19,7 +19,7 @@
     <string name="_plus_minus">+/-</string>
     <string name="_backspace">ᐊ</string>
     <string name="_C">C</string>
-    <string name="text_result">Здесь будет результат</string>
-    <string name="text_formula">Здесь будет формула</string>
+    <string name="text_result"></string>
+    <string name="text_formula"></string>
 
 </resources>
