--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,11 @@
     <string name="_C">C</string>
     <string name="text_result"></string>
     <string name="text_formula"></string>
+    <string name="action_settings">Settings</string>
+    <string name="choose_design">Choose a design:</string>
+    <string name="light_theme">Light theme</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
 
 </resources>
